--- a/.github/workflows/HealthCheck.yml
+++ b/.github/workflows/HealthCheck.yml
@@ -8,12 +8,12 @@ on:
 jobs:
   website-health-check:
     runs-on: ubuntu-latest
-    name: License Check
+    name: Site availability check
     steps:
       - uses: actions/checkout@v2
       - uses: theritikchoure/websentry@main
         with:
-          website-url: 'localhistory.group'  # Set the website URL you want to check
+          website-url: 'fred.localhistory.group'  # Set the website URL you want to check
           max-retries: '3'
           retry-interval: '5s'
           request-timeout: '10s'
