--- a/.github/workflows/HealthCheck.yml
+++ b/.github/workflows/HealthCheck.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Site availability check
     steps:
-      - uses: actions/checkout@v2
       - uses: theritikchoure/websentry@main
         with:
-          website-url: 'fred.localhistory.group'  # Set the website URL you want to check
+          website-url: 'example.localhistory.group'  # Set the website URL you want to check
           max-retries: '3'
           retry-interval: '5s'
           request-timeout: '10s'
