--- a/.github/workflows/HealthCheck.yml
+++ b/.github/workflows/HealthCheck.yml
@@ -2,7 +2,7 @@ name: Website Health Check
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Run every hour
+    - cron: '0 7,9,11,13,15,17,19 * * *'  # Run every hour
   workflow_dispatch:
 
 jobs:
